fix(scrollbar): fix double scrollbar on Windows

--- a/src/app/styles/app.sass
+++ b/src/app/styles/app.sass
@@ -37,4 +37,6 @@ html, body, .hero
   height: 100%
   background: $background-button
   font-family: $font-family-regular
-  overflow-x: hidden
+
+  +mobile
+    overflow-x: hidden
